--- a/Proyecto/altaproducto.html
+++ b/Proyecto/altaproducto.html
@@ -9,7 +9,7 @@
       <div class="imagenes-logo">
         <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
         <div class="textos-header">
-          <h1 class="txt-head">Portal de Productos PSAG</h1>            
+          <h1 class="txt-head">Alta de Nuevos Productos</h1>            
         </div>
         <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
       </div>      
