se edito contacto

--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -32,28 +32,32 @@
           </nav>
         </div>
         <div id="form-contacto">
-          <h2 class="txt-form">Formulario de Contacto</h2>
-          <p class="txt-form">
-            Si desea contactarse con nosotros, complete el siguiente formulario y nos pondremos en contacto a la brevedad.
+          <h2 class="txt-form">Contactenos.</h2>
+          <br>
+          <br>
+          <p class="txt-form" style="font-style: italic ;">
+            Si desea contactarse con nosotros, complete el siguiente formulario
+            y a la brevedad nos comunicaremos con usted.
           </p>
+          <br>
           <form>                        
             <label for="nombre">Nombre:</label><br>
-            <input type="text" id="nombre" name="nombre"><br><br>
+            <input type="text" id="nombre" name="nombre">
 
             <label for="apellido">Apellido:</label><br>
-            <input type="text" id="apellido" name="apellido"><br><br>
+            <input type="text" id="apellido" name="apellido">
 
             <label for="email">Mail:</label><br>
-            <input type="email" id="email" name="email"><br><br>
+            <input type="email" id="email" name="email">
 
             <label for="telefono">Telefono:</label><br>
-            <input type="text" id="telefono" name="telefono"><br><br>
+            <input type="text" id="telefono" name="telefono">
 
             <label for="asunto">Asunto:</label><br>            
-            <input type="text" id="asunto" name="asunto"><br><br>   
+            <input type="text" id="asunto" name="asunto">
 
             <label for="mensaje">Mensaje:</label><br>
-            <textarea id="mensaje" name="mensaje"></textarea><br><br>
+            <textarea id="mensaje" name="mensaje"></textarea>
 
             <div class="contenedor-botones">
               <button class="botones-pedidos" type="submit">Enviar</button>
@@ -61,10 +65,10 @@
             </div>
           </form>
         </div>
-    </div>
+  </div>
     <footer>
-        <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
-          <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
-    </footer>
+    <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
+      <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
+  </footer>
 </body>
 </html>
