--- a/Proyecto/carrito.html
+++ b/Proyecto/carrito.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <HTML lang="es">  
   <head>      
-    <link  rel="stylesheet" href="./style/proyecto.css">       
+    <link rel="stylesheet" href="./style/altaprod.css"> 
+    <script src="./Script/carrito.js" defer></script>    
   </head>
   <body>
     <div class="top-intro">
