--- a/Proyecto/carrito.html
+++ b/Proyecto/carrito.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
-<HTML lang="es">  
-  <head>      
-    <link rel="stylesheet" href="./style/altaprod.css"> 
-    <script src="./Script/carrito.js" defer></script>    
-  </head>
-  <body>
-    <div class="top-intro">
-      <div class="imagenes-logo">
-        <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
-        <div class="textos-header">
-          <h1 class="txt-head">Carrito de compra de Productos</h1>            
-        </div>
-        <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
-      </div>      
-        <nav class="menu-foot">
-          <ul>
-            <li class="li-menu">
-              <a href="index.html">Catalogo</a>
-            </li>
-            <li class="li-menu">
-              <a href="verpedidos.html">Consulta Pedidos</a>
-            </li>
-            <li class="li-menu">
-              <a href="nostros.html">Nosotros</a>
-            </li>
-            <li class="li-menu">
-              <a href="contacto.html">Contacto</a>
-            </li>
-            <li class="li-menu">
-              <a href="cargapedidos.html">Carga Avanzada Pedidos</a>
-            </li>
-          </ul>
-        </nav>
+<html lang="es">  
+<head>      
+  <meta charset="UTF-8">
+  <title>Carrito de Productos</title>
+  <link rel="stylesheet" href="./style/altaprod.css"> 
+  <script src="./Script/carrito.js" defer></script>    
+</head>
+
+<body>
+  <div class="top-intro">
+    <div class="imagenes-logo">
+      <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
+      <div class="textos-header">
+        <h1 class="txt-head">Carrito de compra de Productos</h1>            
       </div>
-  </body>
+      <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
+    </div>      
+
+    <nav class="menu-foot">
+      <ul>
+        <li class="li-menu">
+          <a href="index.html">Catálogo</a>
+        </li>
+        <li class="li-menu">
+          <a href="verpedidos.html">Consulta Pedidos</a>
+        </li>
+        <li class="li-menu">
+          <a href="nostros.html">Nosotros</a>
+        </li>
+        <li class="li-menu">
+          <a href="contacto.html">Contacto</a>
+        </li>
+        <li class="li-menu">
+          <a href="cargapedidos.html">Carga Avanzada Pedidos</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
+  <!-- Contenedor donde se renderiza el carrito -->
+  <div class="carrito-container"></div>
+
   <footer>
-    <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
-      <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
+    <p class="derechosreservados" style="text-align: center;">
+      Todos los derechos reservados por 
+      <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.
+    </p>
   </footer>
-  </html>
+</body>
+</html>
