se configuro web carrito CSS y JS para finalizar compras
falta editar y mejorar interfaz

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <HTML lang="es">  
-  <head>      
-    <link  rel="stylesheet" href="./style/proyecto.css">   
-      <script src="./Script/app.js" defer></script>    
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Portal de Productos PSAG</title>
+    <link rel="stylesheet" href="./style/proyecto.css">   
+    <script src="./Script/app.js" defer=""></script>    
   </head>
   <body>
     <div class="top-intro">
@@ -33,7 +36,7 @@
           </ul>
         </nav>
       </div>
-      <a href="cargapedidos.html" id="btn-flotante" title="Ir al carrito">🛒</a>
+      <a href="carrito.html" id="btn-flotante" title="Ir al carrito">🛒</a>
       <main>
         <aside class= "menu-lateral">
           <label id="lbl-buscar">Buscar:</label>
@@ -53,5 +56,5 @@
       <p class="derechosreservados" style="text-align: center;">Todos los derechos reservados por 
       <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.</p>
       </footer>
-      </body>
+  </body>
 </HTML>
