--- a/Proyecto/carrito.html
+++ b/Proyecto/carrito.html
@@ -1,48 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">  
-<head>      
-  <meta charset="UTF-8">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Carrito de Productos</title>
-  <link rel="stylesheet" href="./style/altaprod.css"> 
+  <link rel="stylesheet" href="./style/carrito.css">
   <script src="./Script/carrito.js" defer></script>    
 </head>
 
 <body>
   <div class="top-intro">
     <div class="imagenes-logo">
-      <img class="logo-psag" src="./img/logo_2017.png" alt="Imagen no disponible">
+      <img class="logo-psag" src="./img/logo_2017.png" alt="Logo PSAG">
       <div class="textos-header">
         <h1 class="txt-head">Carrito de compra de Productos</h1>            
       </div>
-      <img class="logo-psag" src="./img/logo_felpita.png" alt="Imagen no disponible">
+      <img class="logo-psag" src="./img/logo_felpita.png" alt="Logo Felpita">
     </div>      
 
     <nav class="menu-foot">
       <ul>
-        <li class="li-menu">
-          <a href="index.html">Catálogo</a>
-        </li>
-        <li class="li-menu">
-          <a href="verpedidos.html">Consulta Pedidos</a>
-        </li>
-        <li class="li-menu">
-          <a href="nostros.html">Nosotros</a>
-        </li>
-        <li class="li-menu">
-          <a href="contacto.html">Contacto</a>
-        </li>
-        <li class="li-menu">
-          <a href="cargapedidos.html">Carga Avanzada Pedidos</a>
-        </li>
+        <li class="li-menu"><a href="index.html">Catálogo</a></li>
+        <li class="li-menu"><a href="verpedidos.html">Consulta Pedidos</a></li>
+        <li class="li-menu"><a href="nostros.html">Nosotros</a></li>
+        <li class="li-menu"><a href="contacto.html">Contacto</a></li>
+        <li class="li-menu"><a href="cargapedidos.html">Carga Avanzada Pedidos</a></li>
       </ul>
     </nav>
   </div>
-
-  <!-- Contenedor donde se renderiza el carrito -->
-  <div class="carrito-container"></div>
-
+  <main class="carrito-container">
+    <div class="prod-container" id="productos-lista">
+    </div>
+    <div class="carrito-total" id="total-container">
+      <p><strong>Total:</strong> $<span id="total-general">0</span></p>
+      <button class="btn-finalizar">Finalizar Compra</button>
+    </div>
+  </main>
   <footer>
-    <p class="derechosreservados" style="text-align: center;">
+    <p class="derechosreservados">
       Todos los derechos reservados por 
       <a href="https://www.psag.com.ar">Papelera San Andrés de Giles</a> ©.
     </p>
