se configuro envio contacto a DB

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -40,7 +40,7 @@
       <main>
         <aside class= "menu-lateral">
           <label id="lbl-buscar">Buscar:</label>
-          <input id="busqueda-prod" type="search">
+          <input id="busqueda-prod" type="search" placeholder="Buscar productos..." title="Buscar productos">
           <div>            
             <ul class="chkbox-familia">
               <li> <input id="chk-ph" type="checkbox" value="ph"> <label for="chk-ph">Papel Higiénico</label> </li>
