--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    
-    <link rel="stylesheet" href="./style/contacto.css">    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/contacto.css"> 
+    <script src="./Script/contacto.js" defer=""></script>
 </head>
 <body>
   <div class="prueba-container">
@@ -47,11 +49,11 @@
             <label for="apellido">Apellido:</label><br>
             <input type="text" id="apellido" name="apellido">
 
-            <label for="email">Mail:</label><br>
-            <input type="email" id="email" name="email">
+            <label for="mail">Mail:</label><br>
+            <input type="email" id="mail" name="email">
 
             <label for="telefono">Telefono:</label><br>
-            <input type="text" id="telefono" name="telefono">
+            <input type="text" id="telefono" name="telefono" autocomplete="on">
 
             <label for="asunto">Asunto:</label><br>            
             <input type="text" id="asunto" name="asunto">
