update de ref links

--- a/Proyecto/carrito.html
+++ b/Proyecto/carrito.html
@@ -18,11 +18,21 @@
 
     <nav class="menu-foot">
       <ul>
-        <li class="li-menu"><a href="index.html">Catálogo</a></li>
-        <li class="li-menu"><a href="verpedidos.html">Consulta Pedidos</a></li>
-        <li class="li-menu"><a href="nostros.html">Nosotros</a></li>
-        <li class="li-menu"><a href="contacto.html">Contacto</a></li>
-        <li class="li-menu"><a href="cargapedidos.html">Carga Avanzada Pedidos</a></li>
+        <li class="li-menu">
+          <a href="index.html">Catálogo</a>
+        </li>
+        <li class="li-menu">
+          <a href="verpedidos.html">Consulta Pedidos</a>
+        </li>
+        <li class="li-menu">
+          <a href="nostros.html">Nosotros</a>
+        </li>
+        <li class="li-menu">
+          <a href="contacto.html">Contacto</a>
+        </li>
+        <li class="li-menu">
+          <a href="cargapedidos.html">Carga Avanzada Pedidos</a>
+        </li>
       </ul>
     </nav>
   </div>
