--- a/Proyecto/nostros.html
+++ b/Proyecto/nostros.html
@@ -15,11 +15,8 @@
             <nav class="menu-foot">
               <ul>
                 <li class="li-menu">
-                  <a href="cargapedidos.html">Carga avanzada de Pedidos</a> <!-- ver por que no puedo cambiar color de fuente desde Css y aca si con Style="Color:"-->
-                </li>
-                <li class="li-menu">
-                <a href="verpedidos.html">Consulta Pedidos</a>
-                </li>
+                  <a href="index.html">Catálogo</a>
+                </li>                
                 <li class="li-menu">
                   <a href="nostros.html">Nosotros</a>
                 </li>
