--- a/Proyecto/adminProd.html
+++ b/Proyecto/adminProd.html
@@ -26,7 +26,10 @@
             </li>
             <li class="li-menu">
               <a href="contacto.html">Contacto</a>
-            </li>        
+            </li>       
+            <li class="li-menu">
+              <a href="verpedidos.html">Consulta Pedidos</a>
+            </li> 
           </ul>
         </nav>       
       </div>
