--- a/Proyecto/altaproducto.html
+++ b/Proyecto/altaproducto.html
@@ -15,7 +15,7 @@
       </div>      
         <nav class="menu-foot">
           <ul>
-             <li class="li-menu">
+            <li class="li-menu">
               <a href="adminProd.html">Administrador de Productos</a>
             </li>
             <li class="li-menu">
@@ -26,7 +26,10 @@
             </li>
             <li class="li-menu">
               <a href="contacto.html">Contacto</a>
-            </li>        
+            </li>
+            <li class="li-menu">
+              <a href="cargapedidos.html">Carga avanzada de Pedidos</a>
+            </li>
           </ul>
         </nav>       
       </div>
