se modifico a una card en responsive, se ajustaron en el html detalle para ocupar mejor el espacio

--- a/Proyecto/detalle.html
+++ b/Proyecto/detalle.html
@@ -34,9 +34,9 @@
           </ul>
         </nav>
       </div>
-  <main>
-    <div class="prod-container">
-      <div id="detalle-producto" class="card-product"></div>
+  <main class="main-detalle">
+    <div class="prod-container" id="detalle-producto">
+      <div class="card-product"></div>
     </div>
   </main>
   <footer>
