--- a/Proyecto/adminProd.html
+++ b/Proyecto/adminProd.html
@@ -31,8 +31,9 @@
         </nav>       
       </div>
       <main id="main-editar-producto">
+        <div id="mensaje-sistema" style="display:none; padding:10px; margin:10px 0; border-radius:6px; font-weight:bold;"></div>
         <h1>Editar o Eliminar productos del Catálogo</h1>
-
+        
         <label for="select-productos">Seleccioná un producto:</label>
         <select id="select-productos">
           <option value="">Cargando productos...</option>
