--- a/Proyecto/altaproducto.html
+++ b/Proyecto/altaproducto.html
@@ -34,6 +34,7 @@
         </nav>       
       </div>
       <main>
+      <div id="mensaje-sistema" style="display:none; padding:10px; margin:10px 0; border-radius:6px; font-weight:bold;"></div>
       <h2 id="addprod">Agregar Nuevo Producto</h2>
       <form id="add-product-form">
         <label for="product-name">Nombre del Producto:</label>
